# OpenClaw-PARA

./: .gitignore  .gitmodules  CLAUDE.md
docs/: dev-progress.md
docs/arch/HLD/: CONTEXT.md  CURRENT_STATE.md  DECISIONS.md  README.md
docs/arch/HLD/hub/: ARCHITECTURE.md  DATA_MODEL.md  OPERATIONS.md  REQUIREMENTS.md
docs/arch/HLD/plugin/: ARCHITECTURE.md  DATA_MODEL.md  OPERATIONS.md  REQUIREMENTS.md
docs/arch/LLD/hub/: access-control.md  anonymizer.md  content-store.md  fl-aggregator.md  hub-api.md  matching-engine.md  pageindex-server.md  reputation-service.md
docs/arch/LLD/plugin/: clast-engine.md  fl-client.md  (+3 more)
docs/todo/: phase1.md
hub/: Dockerfile  pyproject.toml  requirements.txt
hub/src/: main.py
hub/src/api/routers/: fl.py  projects.py  users.py
hub/src/db/: session.py
hub/src/models/: db_models.py  schemas.py
hub/src/services/: access_control.py  anonymizer.py  content_store.py  fl_aggregator.py  matching_engine.py  reputation_service.py
openclaw/: README.md
pageindex-server/: .dockerignore  .env.example  Dockerfile  docker-compose.yml  indexer.py  requirements.txt  searcher.py  server.py  store.py
plugin/: openclaw.plugin.json  package.json  tsconfig.json  vitest.config.ts
plugin/src/: index.ts  types.ts
plugin/src/hooks/: session-start.ts
plugin/src/hub/: fl-client.ts  hub-client.ts
plugin/src/memory/: clast-engine.ts  memory-manager.ts  sqlite-index.ts
plugin/src/search/: intent-classifier.ts  pageindex-search.ts
plugin/src/tools/: check-transitions.ts  classify-intent.ts  search-project.ts  share-to-hub.ts
